# opentelemetry_testing

./: ARCHITECTURE.md  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py  settings.py  telemetry.py
observability/: otelcol-config.yaml  prometheus.yml  tempo-config.yaml
observability/grafana/provisioning/dashboards/: dashboards.yaml  fastapi-overview.json
observability/grafana/provisioning/datasources/: datasources.yaml
